--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ body {
   font-weight: 400;
   line-height: 1.75;
   overflow-x: hidden;
+  cursor: auto;
 }
 
 img   { max-width: 100%; height: auto; display: block; }
